# crustdg

./: .gitignore  Cargo.toml  README.md  about-cdg.md  makefile  rustfmt.toml
scripts/: confirm-prod.sh  style.sh
src/: commands.rs  idk.py  lib.rs  main.rs
src/bitmask/: constants.rs  functions.rs  mod.rs
src/cdg_display/: mod.rs
src/types/: color_spec.rs  mod.rs  scroll_command_data.rs  subcode.rs  tile_command_data.rs
