[package]
name = "crustdg"
version = "0.1.0"
edition = "2021"
description = "Parser for CD+G data"
repository = "https://github.com/buckynbrocko/crustdg"

author = "Bucky"
license = "unlicense"
keywords = ["karaoke", "CDG", ".cdg"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
pixels = "0.11.0"
rstest = "0.16.0"
winit = "0.28.1"
winit_input_helper = "0.14.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"